# planaria-deploy

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  call_external_tool.sh  call_tool.sh  install.sh  planaria_core.py  planaria_run.sh  planaria_setup.sh  pyproject.toml
workspace_default/: config.json
workspace_default/skills/srt_reserve/: manifest.json  run.py
